--- a/Simulator/public/index.html
+++ b/Simulator/public/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modular App</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>RC Circuit Analysis</title>
 </head>
 <body>
     <div id="root"></div>
-    <script src="../src/index.tsx"></script>
 </body>
 </html>
